--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <div class="title_name">
+            <h1>LA ORIGINAL</h1>
+        </div>
+        <div class="nav_container">
+            <nav class="nav">
+                <ol>
+                    <li><a href=""><span>incio</span></a></li>
+                    <li class="borders"></li>
+                    <li><a href=""><span>Menu</span></a></li>
+                    <li class="borders"></li>
+                    <li><a href=""><span>Galeria</span></a></li>
+                    <li class="borders"></li>
+                    <li><a href=""><span>Nosotros</span></a></li>
+                    <li class="borders"></li>
+                    <li><a href=""><span>Contacto</span></a></li>
+                </ol>
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
