--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <footer class="footer">
+        <div class="redes_icons">
+            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/1051/1051309.svg" alt="facebook"></a>
+            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384089.svg" alt="instagram"></a>
+            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/160/160200.svg" alt="whatsapp"></a>
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <p>Somos la mejor cocina</p>
+        </div>
+    </footer>
 </body>
 </html>
