body v1 (not finished)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="image_container">
     
+            <img src="https://i.imgur.com/AZRdpsp.jpg" alt="barbacoa">
+            <div class="text"></div>
+    
+    </div>
+    <div class="contain">
+        <div class="menu"></div>
+        <div class="contact">
+            <h1>Contactanos</h1>
+            <section><input type="text"></section>
+            <section><input type="text"></section>
+            <section><input type="text"></section>
+            <section><button>Enviar</button></section>
+        </div>
+        <div class="contact2">
+            <section>
+                <img src="https://www.flaticon.com/svg/static/icons/svg/733/733585.svg" alt="whatsapp">
+                <p>6691234567</p>
+            </section>
+            <section>
+                <a href=""><p>laoriginal@hotmail.com</p></a>
+            </section>
+        </div>
+    </div>
 </body>
 </html>
