--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <ol>
                     <li><a href=""><span>incio</span></a></li>
                     <li class="borders"></li>
-                    <li><a href=""><span>Menu</span></a></li>
-                    <li class="borders"></li>
+                    <!-- <li><a href=""><span>Menu</span></a></li>
+                    <li class="borders"></li> -->
                     <li><a href=""><span>Galeria</span></a></li>
                     <li class="borders"></li>
                     <li><a href=""><span>Nosotros</span></a></li>
@@ -122,9 +122,9 @@
     </div>
     <footer class="footer">
         <div class="redes_icons">
-            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/1051/1051309.svg" alt="facebook"></a>
-            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384089.svg" alt="instagram"></a>
-            <a href="" ><img src="https://www.flaticon.com/svg/static/icons/svg/160/160200.svg" alt="whatsapp"></a>
+            <a href="https://www.facebook.com/Comida-Para-Eventos-Y-Barbacoa-LA-Original--1272594172794387" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/1051/1051309.svg" alt="facebook"></a>
+            <a href="https://www.instagram.com/comida_paraeventosla_orginal/" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384089.svg" alt="instagram"></a>
+            <a href="https://api.whatsapp.com/send?phone=6692050937" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/160/160200.svg" alt="whatsapp"></a>
         </div>
         <div style="display: flex; justify-content: center;">
             <p>Somos la mejor cocina</p>
