Modificaion al css en grid y colores

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                 <h1>Paquetes</h1>
             </section>
             <section>
-                <h2>Todo incluido 100.</h2>
+                <h2>
+                    <li class="title-packets">
+                        Todo incluido 100.
+                    </li>
+                </h2>
             </section>
             <section>
                 <h3>
@@ -60,7 +64,9 @@
             </section>
             <section>
                 <h2>
-                    Taquiza para 50 personas.
+                    <li class="title-packets">
+                        Taquiza para 50 personas.
+                    </li>
                 </h2>
             </section>
             <section>
@@ -102,7 +108,9 @@
                     <input type="text" id="telefono" required="required" class="form-control" placeholder="Telefono">
                 </div>
                 <div>
-                    <button type="submit" class="bt bt-primary">Contactenme</button>
+                    <button type="submit" class="bt bt-primary">
+                        Contactenme
+                    </button>
                 </div>
             </form>
             <!-- <section><input type="text"></section>
