V1 de Nosotros page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <div class="nav_container">
             <nav class="nav">
                 <ol>
-                    <li><a href=""><span>incio</span></a></li>
+                    <li><a href="index.html"><span>incio</span></a></li>
                     <li class="borders"></li>
                     <!-- <li><a href=""><span>Menu</span></a></li>
                     <li class="borders"></li> -->
                     <li><a href=""><span>Galeria</span></a></li>
                     <li class="borders"></li>
-                    <li><a href=""><span>Nosotros</span></a></li>
+                    <li><a href="us.html"><span>Nosotros</span></a></li>
                     <li class="borders"></li>
                     <li><a href=""><span>Contacto</span></a></li>
                 </ol>
