Agregado de layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="borders"></li>
                     <!-- <li><a href=""><span>Menu</span></a></li>
                     <li class="borders"></li> -->
-                    <li><a href=""><span>Galeria</span></a></li>
+                    <li><a href="galeria.html"><span>Galeria</span></a></li>
                     <li class="borders"></li>
                     <li><a href="us.html"><span>Nosotros</span></a></li>
                     <li class="borders"></li>
