--- a/us.html
+++ b/us.html
@@ -19,7 +19,7 @@
                     <li class="borders"></li>
                     <!-- <li><a href=""><span>Menu</span></a></li>
                     <li class="borders"></li> -->
-                    <li><a href=""><span class="nav_titles">Galeria</span></a></li>
+                    <li><a href="galeria.html"><span class="nav_titles">Galeria</span></a></li>
                     <li class="borders"></li>
                     <li><a href=""><span class="nav_titles">Nosotros</span></a></li>
                     <li class="borders"></li>
