Se agrego +52 en whats de index

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="redes_icons">
             <a href="https://www.facebook.com/Comida-Para-Eventos-Y-Barbacoa-LA-Original--1272594172794387" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/1051/1051309.svg" alt="facebook"></a>
             <a href="https://www.instagram.com/comida_paraeventosla_orginal/" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384089.svg" alt="instagram"></a>
-            <a href="https://api.whatsapp.com/send?phone=6692148332" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/160/160200.svg" alt="whatsapp"></a>
+            <a href="https://api.whatsapp.com/send?phone=+526692148332" target="_blank" ><img src="https://www.flaticon.com/svg/static/icons/svg/160/160200.svg" alt="whatsapp"></a>
         </div>
         <div style="display: flex; justify-content: center;">
             <p>Somos la mejor cocina</p>
