grid de galerias terminado

--- a/galeria.html
+++ b/galeria.html
@@ -30,60 +30,96 @@
     </header>
     <div class="galeria_container">
         <div class="galerias galeria1">
-            <div class="img1">item1
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img1 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img2">item2
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img2 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div  class="img3">item3
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div  class="img3 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img4">item4
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img4 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
+            <p>Posadas</p>
         </div>
         <div class="galerias galeria2">
-            <div class="img1">item1
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img1 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img2">item2
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img2 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div  class="img3">item3
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div  class="img3 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img4">item4
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img4 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
+            <p>Cumpleaños</p>
         </div>
         <div class="galerias galeria3">
-            <div class="img1">item1
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img1 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img2">item2
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img2 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div  class="img3">item3
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div  class="img3 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img4">item4
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img4 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
+            <p>Bodas</p>
         </div>
         <div class="galerias galeria4">
-            <div class="img1">item1
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img1 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img2">item2
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img2 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div  class="img3">item3
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div  class="img3 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
-            <div class="img4">item4
-                <!-- <img src="https://i.imgur.com/0rTNdjv.jpg" alt=""> -->
+            <div class="img4 images_containers">
+                <a href="">
+                    <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
+                </a>
             </div>
+            <p>Reuniones</p>
         </div>
     </div>
     <footer class="footer">
