--- a/galeria.html
+++ b/galeria.html
@@ -31,22 +31,22 @@
     <div class="galeria_container">
         <div class="galerias galeria1">
             <div class="img1 images_containers">
-                <a href="">
+                <a href="#galeria_posadasimg1">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
-                <a href="">
+                <a href="#galeria_posadasimg2">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
-                <a href="">
+                <a href="#galeria_posadasimg3">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
-                <a href="">
+                <a href="#galeria_posadasimg4">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
@@ -54,22 +54,22 @@
         </div>
         <div class="galerias galeria2">
             <div class="img1 images_containers">
-                <a href="">
+                <a href="#galeria_cumpleanosimg1">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
-                <a href="">
+                <a href="#galeria_cumpleanosimg2">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
-                <a href="">
+                <a href="#galeria_cumpleanosimg3">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
-                <a href="">
+                <a href="#galeria_cumpleanosimg4">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
@@ -77,22 +77,22 @@
         </div>
         <div class="galerias galeria3">
             <div class="img1 images_containers">
-                <a href="">
+                <a href="#galeria_bodasimg1">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
-                <a href="">
+                <a href="#galeria_bodasimg2">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
-                <a href="">
+                <a href="#galeria_bodasimg3">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
-                <a href="">
+                <a href="#galeria_bodasimg4">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
@@ -100,27 +100,167 @@
         </div>
         <div class="galerias galeria4">
             <div class="img1 images_containers">
-                <a href="">
+                <a href="#galeria_reunionesimg1">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img2 images_containers">
-                <a href="">
+                <a href="#galeria_reunionesimg2">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div  class="img3 images_containers">
-                <a href="">
+                <a href="#galeria_reunionesimg3">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <div class="img4 images_containers">
-                <a href="">
+                <a href="#galeria_reunionesimg4">
                     <img class="galeria_imgs" src="https://i.imgur.com/0rTNdjv.jpg" alt="">
                 </a>
             </div>
             <p>Reuniones</p>
         </div>
+    </div>
+
+    <!-- Posadas -->
+
+    <div class="pop_galery" id="galeria_posadasimg1">
+        <div class="pop_image">
+            <a href="#galeria_posadasimg4">&#60;</a>
+            <a href="#galeria_posadasimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg2">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_posadasimg2">
+        <div class="pop_image">
+            <a href="#galeria_posadasimg1">&#60;</a>
+            <a href="#galeria_posadasimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg3">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_posadasimg3">
+        <div class="pop_image">
+            <a href="#galeria_posadasimg2">&#60;</a>
+            <a href="#galeria_posadasimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg4">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_posadasimg4">
+        <div class="pop_image">
+            <a href="#galeria_posadasimg3">&#60;</a>
+            <a href="#galeria_posadasimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_posadasimg1">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+
+    <!-- Cumpleaños -->
+
+    <div class="pop_galery" id="galeria_cumpleanosimg1">
+        <div class="pop_image">
+            <a href="#galeria_cumpleanosimg4">&#60;</a>
+            <a href="#galeria_cumpleanosimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg2">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_cumpleanosimg2">
+        <div class="pop_image">
+            <a href="#galeria_cumpleanos">&#60;</a>
+            <a href="#galeria_cumpleanosimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg3">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_cumpleanosimg3">
+        <div class="pop_image">
+            <a href="#galeria_cumpleanosimg2">&#60;</a>
+            <a href="#galeria_cumpleanosimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg4">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_cumpleanosimg4">
+        <div class="pop_image">
+            <a href="#galeria_cumpleanosimg3">&#60;</a>
+            <a href="#galeria_cumpleanosimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_cumpleanosimg1">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+
+    <!-- Bodas -->
+
+    <div class="pop_galery" id="galeria_bodasimg1">
+        <div class="pop_image">
+            <a href="#galeria_bodasimg4">&#60;</a>
+            <a href="#galeria_bodasimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg2">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_bodasimg2">
+        <div class="pop_image">
+            <a href="#galeria_bodas">&#60;</a>
+            <a href="#galeria_bodasimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg3">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_bodasimg3">
+        <div class="pop_image">
+            <a href="#galeria_bodasimg2">&#60;</a>
+            <a href="#galeria_bodasimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg4">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_bodasimg4">
+        <div class="pop_image">
+            <a href="#galeria_bodasimg3">&#60;</a>
+            <a href="#galeria_bodasimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_bodasimg1">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+
+    <!-- Reuniones -->
+
+    <div class="pop_galery" id="galeria_reunionesimg1">
+        <div class="pop_image">
+            <a href="#galeria_reunionesimg4">&#60;</a>
+            <a href="#galeria_reunionesimg2"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_reunionesimg2">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_reunionesimg2">
+        <div class="pop_image">
+            <a href="#galeria_reuniones">&#60;</a>
+            <a href="#galeria_reunionesimg3"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_reunionesimg3">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_reunionesimg3">
+        <div class="pop_image">
+            <a href="#galeria_reunionesimg2">&#60;</a>
+            <a href="#galeria_reunionesimg4"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_reunionesimg4">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
+    </div>
+    <div class="pop_galery" id="galeria_reunionesimg4">
+        <div class="pop_image">
+            <a href="#galeria_reunionesimg3">&#60;</a>
+            <a href="#galeria_reunionesimg1"><img src="https://i.imgur.com/0rTNdjv.jpg" alt=""></a>
+            <a href="#galeria_reunionesimg1">></a>
+        </div>
+            <a class="cerrar" href="">x</a>
     </div>
     <footer class="footer">
         <div class="redes_icons">
