--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="borders"></li>
                     <li><a href="us.html"><span>Nosotros</span></a></li>
                     <li class="borders"></li>
-                    <li><a href=""><span>Contacto</span></a></li>
+                    <li><a href="contacto.html"><span>Contacto</span></a></li>
                 </ol>
             </nav>
         </div>
