beta v1 de la paguina

--- a/us.html
+++ b/us.html
@@ -23,7 +23,7 @@
                     <li class="borders"></li>
                     <li><a href=""><span class="nav_titles">Nosotros</span></a></li>
                     <li class="borders"></li>
-                    <li><a href=""><span class="nav_titles">Contacto</span></a></li>
+                    <li><a href="contacto.html"><span class="nav_titles">Contacto</span></a></li>
                 </ol>
             </nav>
         </div>
